--- a/index.css
+++ b/index.css
@@ -2,3 +2,46 @@
     margin: 0;
     padding: 0;
 }
+
+ div {
+     width: 400px;
+     height: 400px;
+     margin: 100px auto;
+     position: relative;
+     border: 1px solid black;
+ }
+
+ h1 {
+     margin-top: 30px;
+     margin-bottom: 20px;
+     /* width:200px; */
+     margin: 30px auto 0;
+     text-align: center;
+
+ }
+
+ p {
+     width: 100px;
+     height: 100px;
+     position: absolute;
+     /* top: 50%;
+     left: 50%;
+     transform: translate(-50%); */
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     margin: auto auto;
+ }
+
+.one {
+    background: red;
+}
+
+.tow {
+    background: green;
+}
+
+.three {
+    background: orange;
+}
